--- a/new web/main.html
+++ b/new web/main.html
@@ -5,75 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-Fs2QV2Mr7iJ0sLUqTfYfbU6RGNpStLb0z1LLIWi0nUENck1PQ1nDWMiP98/6JZkq" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333; 
-      transition: background-color 0.5s, color 0.5s; 
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh; 
-    }
-
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 10px;
-      text-align: center;
-    }
-
-    nav {
-      background-color: #444;
-      overflow: hidden;
-      display: flex;
-      justify-content: space-between; 
-      align-items: center; 
-      padding: 10px;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      padding: 14px 16px;
-    }
-
-    nav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-
-    /* Dark Mode */
-    body.dark-mode {
-      background-color: #222;
-      color: #fff;
-    }
-
-    nav.dark-mode {
-      background-color: #555;
-    }
-
-    nav.dark-mode a {
-      color: white;
-    }
-
-    nav.dark-mode a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-
-    
-    .right-section {
-      display: flex;
-      align-items: center;
-    }
-
-    .right-section a {
-      margin-left: 20px;
-    }
-  </style>
+ <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
@@ -95,14 +27,6 @@
     </div>
   </nav>
 
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha384-lTyJNp8+9XDxMiRblKjUlcWtsU0VttDm3zIRFvQ6fM5A0BDkfr7BfobViv4CG6OX" crossorigin="anonymous"></script>
-  <script>
-    function toggleDarkMode() {
-      $("body").toggleClass("dark-mode");
-      $("nav").toggleClass("dark-mode");
-    }
-  </script>
-
+  <script src="./app.js"></script>
 </body>
 </html>
